fix: remove js scrollbar in editor

--- a/src/assets/styles/page.scss
+++ b/src/assets/styles/page.scss
@@ -57,3 +57,7 @@ body {
 .settings-tabs .v-window {
     overflow-y: auto !important;
 }
+
+.editor-dialog .cm-editor {
+    height: calc(100vh - 48px);
+}
